# fairlead

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  design.md
demo/: README.md  async_callback_receiver.py  mock_openai_backend.py  run_async_jobs_demo.sh  run_bluewater_demo.sh  run_routing_demo.sh  shared_pool_policy.sh
docs/: README.md  architecture.md  bluewater_generalization.md  code_walkthrough.md  deferred_tests.md  design.md  fixture_examples.md  job_scheduler_and_temporal.md  roadmap.md
docs/current_work/: deferred_tests.md  phase_6a_clew.md  phase_6b_tackle.md  phase_6c_cleat.md  phase_6d_halyard.md  phase_6e_shackle.md  phase_6f_stay.md  phase_7a_helm.md  phase_7b_trimmer.md  phase_7c_tactician.md  phase_7d_navigator.md  phase_8a_bowline.md  phase_8b_stopper.md  phase_8c_splice.md  phase_8d_clove.md  phase_8e_reef.md
docs/implementation/: code_walkthrough.md  dgx_spark_deployment.md
docs/planning/: architecture.md  design.md  glossary.md  roadmap.md  workloads.md
src/: callbacks.rs  config.rs  error.rs  health.rs  jobs.rs  main.rs  metrics.rs  models.rs  priority.rs  resources.rs  scheduler.rs  storage.rs  workers.rs
src/proxy/: mod.rs  types.rs
src/router/: affinity.rs  backend.rs  circuit.rs  fallback.rs  mod.rs
tests/: process_harness.rs
