[package]
name = "fairlead"
version = "0.1.0"
edition = "2021"
description = "Priority-aware compute task router for AI agent systems"
license = "Apache-2.0"

[dependencies]
tokio              = { version = "1",   features = ["full"] }
axum               = "0.7"
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow             = "1"
thiserror          = "1"
reqwest            = { version = "0.12", features = ["json", "stream"] }
bytes              = "1"
futures-util       = "0.3"

[dev-dependencies]
tower          = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto       = true
